--- a/rmd2png.Rmd
+++ b/rmd2png.Rmd
@@ -34,7 +34,6 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 
 ## TODO
 
-- transform the canvas element to png
 - send the png to the shiny server
 
 ## End of the document
@@ -46,6 +45,8 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 ```{js, echo=FALSE}
 html2canvas(document.body).then(function(canvas) {
   var dataURL = canvas.toDataURL();
-  console.log(dataURL);
+  var img = document.createElement('img');
+  img.src = dataURL;
+  document.body.appendChild(img);
 });
 ```
